--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="#">Shop</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
+        <p>Narayan</p>
     </nav>
     <div class="hero">
         <h1>Welcome to SportStyle</h1>
