--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up / Login Form</title>
-    <link rel="stylesheet" href="./Amendment-APIs_027/styles/signup.css">
+    <link rel="stylesheet" href="./styles/signup.css">
 </head>
 <body>
     <div class="container">
@@ -67,6 +67,6 @@
             </form>
         </div>
     </div>
-    <script src="./Amendment-APIs_027/components/signup.js"></script>
+    <script src="./components/signup.js"></script>
 </body>
 </html>
