--- a/cart.html
+++ b/cart.html
@@ -36,18 +36,21 @@
           align-items: center;
       }
       #cart-section {
-        height: 700px;
+        height: auto;
         display: flex;
         gap: 20px;
         background-color: #f6f6f6;
+        padding-bottom: 190px;
       }
       #left-section {
         width: 60%;
         background-color: white;
-        height: 500px;
+        /* height: 700px; */
         padding: 20px;
+        padding-left: 40px;
+        box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
       }
-      #left-section p {
+      #left-section>p {
         font-weight: bold;
         background-color: #e6a757;
         padding: 5px;
@@ -55,6 +58,11 @@
       #homePageBtn {
        display: flex;
        align-items: center;
+      }
+      #homePageBtn:hover {
+       display: flex;
+       align-items: center;
+       cursor: pointer;
       }
       #right-section {
         width: 31%;
@@ -93,9 +101,9 @@
          margin-right: auto;
          margin-bottom: 11px;
       }
-      /* #bag-total{
-         
-      } */
+      #bag-total{
+         margin-bottom: 8px;
+      }
       #inside-bag-total-1{
         display: flex;
         justify-content: space-between;
@@ -125,15 +133,100 @@
         border: none;
         margin-top: 20px;
       }
+      #checkoutBtn:hover{
+        cursor: pointer;
+       opacity: 0.8;
+      }
+      #checkoutBtn:active{
+        opacity:1;
+      }
+      #cart-navbar span:hover{
+          cursor: pointer;
+          opacity: 0.8;
+      }
+      #cart-navbar span:active{
+          opacity: 1.5;
+      }
+      .cart-item{
+        height: 200px;
+        background-color:#f6f6f6;
+        padding: 15px;
+        margin: 10px;
+        display: flex;
+        gap: 20px;
+        align-items: center;
+      }
+      .cart-item:hover{
+        opacity: 0.9;
+          /* transform: scale(1.01); */
+      }
+      .cart-item img{
+       width: 130px;
+       height: 193px;
+      }
+      .title-price-div{
+        display: flex;
+        justify-content: space-between;
+        width: 550px;
+      }
+      #size-select, #quantity-select{
+        padding: 10px;
+          width: 75px;
+          height: 40px;
+          border-radius: 5px;
+      }
+      .size p{
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+      }
+      #cart-buttons{
+        display: flex;
+        justify-content: end;
+        gap: 10px;
+      }
+      #cart-buttons button{
+           padding: 12px;
+           border-radius: 10px;
+           border: none;
+           font-weight: bold;
+           color: #6b6f79;
+           background-color: white;
+      }
+      #cart-buttons button:hover{
+           padding: 12px;
+           border-radius: 10px;
+           border: none;
+           font-weight: bold;
+           color:white;
+           background-color:black;
+           cursor: pointer;
+      }
+      .size-quantity-div{
+        display: flex;
+        gap: 10px;
+      }
+      .cart-item div, .cart-item p {
+            margin: 0px;
+            padding: 3px;
+            padding-left: 0px;
+            margin-left: 0px;
+      }
+      #cart-footer{
+         height: 70px;
+         background-color: black;
+         color: white;
+         display: flex;
+         justify-content: center;
+         align-items: center;
+      }
     </style>
   </head>
   <body>
     <div id="cart-container">
       <nav id="cart-navbar">
-        <span> 
+        <span id="wishlistBtn"> 
           <img src="assests/wishlist-cart-page-images (7).png" alt="prev icon"> WishList 
         </span>
-        <span> 
+        <span id="contactUs"> 
           <img src="assests/contact-cart-page-images (1).png" alt="prev icon">Contact Us
         </span>
       </nav>
@@ -146,14 +239,17 @@
           <h1>MY SHOPPING BAG</h1>
           <hr />
           <p>STANDARD DELIVERY</p>
+          <div id="cart-items-container">
+            
+          </div>
         </div>
         <div id="right-section">
           <h1>ORDER SUMMARY</h1>
           <div id="summary-container">
              <div id="bag-total">
               <div id="inside-bag-total-1">
-                <span>Bag Total(1)</span>
-                <span>₹ 999</span>
+                <span id="bagTotal">Bag Total</span>
+                <span id="bagTotalPrice"></span>
                </div>
               <div id="inside-bag-total-2">
                 <span>Shipping</span>
@@ -163,9 +259,9 @@
              <div id="payable-amount">
               <span><p style="margin-bottom: 0px;">Payable Amount</p>
               <p style="font-size:medium; font-weight: normal; margin-top: 0px;">(Includes Tax)</p></span>
-              <span>₹ 999</span>
+              <span id="totalPayableAmount">₹ 1559</span>
              </div>
-             <button id="checkoutBtn"> CHECKOUT(1)</button>
+             <button id="checkoutBtn"> CHECKOUT</button>
           </div>
           <div id="bottom-banner">
              <div> <img src="assests/banner-logo.png" alt="logo">Secure Checkout</div>
@@ -174,9 +270,17 @@
           </div>
         </div>
       </section>
+
+      <section id="top-picks">
+         <h1 style="text-align: center;" >TOP PICKS FOR YOU</h1>
+           <h4  style="text-align: center;" >Explore more products to see top picks curated for you</h4>
+      </section>
+      <footer id="cart-footer">
+        <p>&copy; 2024 SportStyle. All rights reserved.</p>
+      </footer>
     </div>
   </body>
 </html>
-<script src="components/cart.js">
+<script type="module" src="components/cart.js">
 
 </script>
