--- a/section_men.html
+++ b/section_men.html
@@ -80,14 +80,14 @@
       </div>
       <div class="navbar">
         <img src="./assests/Sport style.png" alt="" />
-        <span>NEW</span>
-        <span>MEN</span>
-        <span>WOMEN</span>
-        <span>ICONS</span>
-        <span>SPORTS</span>
-        <span>CLASSICS</span>
-        <span>SALE</span>
-        <span>GIFT CARD</span>
+        <a href="index.html">NEW</a>
+        <a href="section_men.html">MEN</a>
+        <a href="section_women.html">WOMEN</a>
+        <a href="#">ICONS</a>
+        <a href="#">SPORTS</a>
+        <a href="#">CLASSICS</a>
+        <a href="#">SALE</a>
+        <a href="#">GIFT CARD</a>
 
         <div class="input">
           
@@ -107,7 +107,7 @@
       <!-- --------------------------- -->
        
 <div class="breadcrumb">
-  <a href="#">Reebok</a> &gt; <a href="#">Men</a>
+  <a href="index.html">Reebok</a> &gt; <a href="#">Men</a>
 </div>
 
 <div class="container">
@@ -151,7 +151,7 @@
       <!-- shoe category -->
       <div class="delivery-location">
         <div class="location-info">
-            <strong>Add delivery location</strong><br>
+            <strong style="text-decoration: underline;">Add delivery location</strong><br>
             <span>to see express delivery options</span>
         </div>
         <div class="items-found">
