--- a/section_women.html
+++ b/section_women.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SportStyle</title>
-    <link rel="stylesheet" href="styles/index.css" />
+    <link rel="stylesheet" href="styles/women_section.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0,0"
@@ -66,25 +66,21 @@
             >LOG IN</span
           >
           <hr />
-          <a href="wishlist_products.html">
-            <span
+          <span
             class="material-symbols-outlined"
             style="margin-top: 4px; cursor: pointer"
           >
             favorite
           </span>
-          </a>
           <hr />
-          <a href="cart.html">
-            <span class="material-symbols-outlined" style="cursor: pointer">
+          <span class="material-symbols-outlined" style="cursor: pointer">
             local_mall
           </span>
-          </a>
         </div>
       </div>
       <div class="navbar">
         <img src="./assests/Sport style.png" alt="" />
-        <a href="#">NEW</a>
+        <a href="index.html">NEW</a>
         <a href="section_men.html">MEN</a>
         <a href="section_women.html">WOMEN</a>
         <a href="#">ICONS</a>
@@ -108,105 +104,62 @@
           Select your nearest store>
         </button>
       </div>
-      <div class="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img
-              src="https://s7ap1.scene7.com/is/image/adityabirlafashion/RBK_D_04_Women_RunningShoe?resMode=sharp2&wid=1550&hei=650"
-              alt="carousel_img1"
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="https://s7ap1.scene7.com/is/image/adityabirlafashion/RBK_D_EOSS?resMode=sharp2&wid=1550&hei=650"
-              alt="slide2"
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="https://s7ap1.scene7.com/is/image/adityabirlafashion/RBK_D_04_Men_RunningShoe?resMode=sharp2&wid=1550&hei=650"
-              alt="slide3"
-            />
-          </div>
-        </div>
-        <button class="carousel-control prev" onclick="prevSlide()">
-          &#10094;
-        </button>
-        <button class="carousel-control next" onclick="nextSlide()">
-          &#10095;
-        </button>
-      </div>
-      <h2 style="margin-left: 80px; margin-top: 40px">SHOP BY CATEGORY</h2>
-      <div class="categories">
-        <div class="category_card">
-          <img
-            src="https://s7ap1.scene7.com/is/image/adityabirlafashion/D_Tile_11_Footwear?resMode=sharp2&wid=420&hei=315"
-            alt=""
-          />
-        </div>
-        <div class="category_card">
-          <img
-            src="https://s7ap1.scene7.com/is/image/adityabirlafashion/D_Tile_13_Apparel?resMode=sharp2&wid=420&hei=315"
-            alt=""
-          />
-        </div>
-        <div class="category_card">
-          <img
-            src="https://s7ap1.scene7.com/is/image/adityabirlafashion/D_Tile_12_Accessories?resMode=sharp2&wid=420&hei=315"
-            alt=""
-          />
-        </div>
-      </div>
-      <div class="carousel2">
-        <div class="carousel-inner2">
-          <div class="carousel-item active2">
-            <img
-              src="https://s7ap1.scene7.com/is/image/adityabirlafashion/spacefoam website_banner?resMode=sharp2&wid=1550&hei=650"
-            />
-          </div>
-          <div class="carousel-item2">
-            <img
-              src="https://s7ap1.scene7.com/is/image/adityabirlafashion/RBK_D_S2_01_ZigDynamica4?resMode=sharp2&wid=1550&hei=650"
-              alt="slide2"
-            />
-          </div>
-          <div class="carousel-item2">
-            <img
-              src="https://s7ap1.scene7.com/is/image/adityabirlafashion/RBK_D_S3_New-Arrivals_updated?resMode=sharp2&wid=1550&hei=650"
-              alt="slide3"
-            />
-          </div>
-        </div>
-        <button class="carousel-control2 prev1" onclick="prevSlide()">
-          &#10094;
-        </button>
-        <button class="carousel-control2 next2" onclick="nextSlide()">
-          &#10095;
-        </button>
-      </div>
-      <!-- Shopping for section -->
-      <div class="Shopping">
-        <h2>Shopping for?</h2>
-        <img
-          src="https://s7ap1.scene7.com/is/image/adityabirlafashion/RBK_D_New shop for men?resMode=sharp2&wid=1300&hei=400"
-          alt="img1"
-        />
-        <img
-          src="https://s7ap1.scene7.com/is/image/adityabirlafashion/RBK_D_New shop for women?resMode=sharp2&wid=1300&hei=400"
-          alt="img2"
-        />
-      </div>
-      <!-- shoe category -->
-       <div id ="shoe_category">
-        <a href="">RUNNING</a>
-        <a href="">WALKING</a>
-        <a href="">TRAINING</a>
-        <a href="">CLASSICS</a>
-        <a href="">VIEW ALL</a>
-       </div>
-      <hr />
-      <div id="card-container">
+      <!-- --------------------------- -->
+       
+<div class="breadcrumb">
+  <a href="index.html">Reebok</a> &gt; <a href="#">Women</a>
+</div>
 
+<div class="container">
+  <h1>WOMEN</h1>
+  <p>SELECT YOUR CATEGORY</p>
+  <div class="category-buttons">
+      <button id="Runningbtn">Running Shoes</button>
+      <button id="Tshirtbtn">T-Shirts</button>
+      <button id="Walkingbtn">Walking Shoes</button>
+      <button id="Classicbtn">Classics Shoes</button>
+
+  </div>
+</div>
+
+<div class="filter-bar">
+  <!-- <div><select><option>Gender</option></select></div> -->
+  <div><select><option>Discount</option></select></div>
+  <!-- <div><select><option>Category</option></select></div> -->
+  <!-- <div><select><option>Sizes</option></select></div> -->
+  <div><select><option>Price</option></select></div>
+  <!-- <div><select><option>Color</option></select></div>
+  <div><select><option>Sleeves</option></select></div>
+  <div><select><option>Pattern</option></select></div>
+  <div><select><option>Neck</option></select></div>
+  <div><select><option>Sports</option></select></div>
+  <div><select><option>Collabs</option></select></div>
+  <div><select><option>Technology</option></select></div>
+  <div><select><option>ClosureType</option></select></div>
+  <div><select><option>Surface</option></select></div>
+  <div><select><option>Icons</option></select></div> -->
+
+  <div><select><option>Sort</option></select></div> 
+
+  <div class="sort-bar">
+    <a href="#">Popular</a>
+  </div>
+</div>
+
+
+
+      <!-- shoe category -->
+      <div class="delivery-location">
+        <div class="location-info">
+            <strong style="text-decoration: underline;">Add delivery location</strong><br>
+            <span>to see express delivery options</span>
+        </div>
+        <div class="items-found">
+            <span>1999 items found</span>
+        </div>
+    </div>
+      <div id="card-container">
+        
       </div>
       <div class="delivery">
         <div class="delivery_icon">
@@ -283,5 +236,5 @@
       </footer>
     </div>
   </body>
-  <script src="./components/index.js"></script>
+  <script src="./components/women_section.js"></script>
 </html>
