Sigup page updated

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <span style="font-size: small; margin-top: 6px; cursor: pointer">CONTACT US</span>
         <hr />
         <span class="material-symbols-outlined"> person </span>
-        <span style="font-size: small; margin-top: 8px; cursor: pointer" id="login-btn">LOG IN</span>
+        <span style="font-size: small; margin-top: 8px; cursor: pointer" id="login-btn"><a href="signup.html"></a>LOG IN</span>
         <hr />
         <a href="wishlist_products.html">
           <span class="material-symbols-outlined" style="margin-top: 4px; cursor: pointer">
