--- a/section_women.html
+++ b/section_women.html
@@ -124,23 +124,18 @@
 </div>
 
 <div class="filter-bar">
-  <!-- <div><select><option>Gender</option></select></div> -->
-  <div><select><option>Discount</option></select></div>
-  <!-- <div><select><option>Category</option></select></div> -->
-  <!-- <div><select><option>Sizes</option></select></div> -->
-  <div><select><option>Price</option></select></div>
-  <!-- <div><select><option>Color</option></select></div>
-  <div><select><option>Sleeves</option></select></div>
-  <div><select><option>Pattern</option></select></div>
-  <div><select><option>Neck</option></select></div>
-  <div><select><option>Sports</option></select></div>
-  <div><select><option>Collabs</option></select></div>
-  <div><select><option>Technology</option></select></div>
-  <div><select><option>ClosureType</option></select></div>
-  <div><select><option>Surface</option></select></div>
-  <div><select><option>Icons</option></select></div> -->
+  <!-- <div><select><option>Discount</option></select></div>
 
-  <div><select><option>Sort</option></select></div> 
+  <div><select><option>Price</option></select></div> -->
+
+
+  <div>
+    <select id="sortSelect">
+      <option value="none">Sort</option>
+      <option value="ascending">Price (Low to High)</option>
+      <option value="descending">Price (High to Low)</option>
+    </select>
+  </div>
 
   <div class="sort-bar">
     <a href="#">Popular</a>
