--- a/contactUs.html
+++ b/contactUs.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - SportStyle</title>
+    <link rel="icon" type="image/x-icon" href="assests/high_res_favicon.ico">
     <style>
          @import url("https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap");
         body {
