--- a/details.html
+++ b/details.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Details</title>
+    <link rel="icon" type="image/x-icon" href="assests/high_res_favicon.ico">
     <style>
-        /* General styles */
+        
         body {
             font-family: 'Roboto', sans-serif;
             margin: 0;
