signUp/login improved

--- a/index.html
+++ b/index.html
@@ -62,9 +62,7 @@
           >
           <hr />
           <span class="material-symbols-outlined"> person </span>
-          <span style="font-size: small; margin-top: 8px; cursor: pointer"
-            >LOG IN</span
-          >
+          <span style="font-size: small; margin-top: 8px; cursor: pointer" id="login-btn"><a href="signup.html"></a>LOG IN</span>
           <hr />
           <a href="wishlist_products.html">
             <span
@@ -105,7 +103,7 @@
         </div>
         <button class="deliverybtn">
           EXPRESS DELIVERY <br />
-          Select your nearest store>
+          Select your nearest store
         </button>
       </div>
       <div class="carousel">
@@ -247,7 +245,7 @@
             </div>
             <div class="about_us">
               <h4>ABOUT US</h4>
-              <p>Aditya Birla Fashion & Retail Ltd</p>
+              <p>Aditya Birla Fashion &amp Retail Ltd</p>
               <p>Find A Store</p>
             </div>
             <div class="community">
@@ -277,7 +275,7 @@
             <p style="margin-left: 80px;">Privacy Policy</p>
             <hr style="margin-left: 20px; margin-right: 20px; margin-bottom: 40px;">
             <p style="margin-right: 400px;">Cookie Policy</p>
-            <p>© 2023 Madura Fashion & Lifestyle, A Division of Aditya Birla Fashion & Retail Limited. All Rights Reserved.</p>
+            <p>© 2023 Madura Fashion &amp Lifestyle, A Division of Aditya Birla Fashion &amp Retail Limited. All Rights Reserved.</p>
           </div>
         </div>
       </footer>
