--- a/section_men.html
+++ b/section_men.html
@@ -62,9 +62,7 @@
           >
           <hr />
           <span class="material-symbols-outlined"> person </span>
-          <span style="font-size: small; margin-top: 8px; cursor: pointer"
-            >LOG IN</span
-          >
+          <span style="font-size: small; margin-top: 8px; cursor: pointer" id="login-btn"><a href="signup.html"></a>LOG IN</span>
           <hr />
           <span
             class="material-symbols-outlined"
