--- a/checkout.html
+++ b/checkout.html
@@ -24,6 +24,8 @@
             <form id="checkoutForm">
                 <label for="name">Name:</label>
                 <input type="text" id="name" required>
+                <label for="name">Email:</label>
+                <input type="email" id="email" required>
                 <label for="address">Address:</label>
                 <!-- <input type="text" id="address" required> -->
                 <textarea id="address" name="address" rows="4" cols="50" ></textarea><br>
