--- a/my_wallet.html
+++ b/my_wallet.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div style="width: 1250px; margin: auto;" id="wallet-container">
-        <header>
+        <header id="wallet-header">
             <button id="backToHomeBtn">
                 <!-- <i class="fas fa-arrow-left"></i> -->
                 Home</button>
