--- a/thankYou.html
+++ b/thankYou.html
@@ -4,77 +4,122 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thank You</title>
-    <link rel="icon" type="image/x-icon" href="assests/high_res_favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/high_res_favicon.ico" />
     <style>
-        
+      /* Global Styles */
       body {
         font-family: "Arial", sans-serif;
         margin: 0;
         padding: 0;
-        background-color: #f9f9f9;
+        background-color: #dacfcf; /* Black background */
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         height: 100vh;
-        color: #333;
+        color: #fff; /* White text */
+        overflow: hidden; /* Ensure the content fits well */
       }
-      #thankyou-container{
-          width: 1400px;
-          max-width: 1300px ;
-          margin: auto;
 
-          display: flex;
+      #thankyou-container {
+        width: 90%;
+        max-width: 1300px;
+        margin: auto;
+        display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-
+        animation: fadeIn 1.2s ease-in-out;
       }
 
+      /* Header */
       header {
-        background-color: #4caf50;
+        background-color: #c40c2e; /* Red header */
         width: 100%;
         padding: 20px;
         text-align: center;
         color: white;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+        border-radius: 8px;
+        animation: slideDown 0.8s ease forwards;
       }
 
       h1 {
         margin: 0;
-        font-size: 2.5em;
+        font-size: 3em;
+        font-weight: bold;
       }
 
+      /* Main Content */
       main {
         text-align: center;
-        padding: 20px;
-        background-color: white;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        padding: 30px;
+        background-color: #fff; /* White background */
+        color: #000; /* Black text */
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         border-radius: 8px;
-        /* max-width: 1400px; */
-        /* margin-left: auto; */
         margin-top: 20px;
+        width: 100%;
+        max-width: 800px;
+        animation: scaleUp 0.8s ease-in-out;
+        transform: scale(0.95);
       }
 
       p {
-        font-size: 1.2em;
-        margin-bottom: 20px;
+        font-size: 1.3em;
+        margin-bottom: 30px;
+        line-height: 1.6;
       }
 
+      /* Button */
       #homePageBtn {
-        background-color: #4caf50;
-        color: white;
+        background-color: #c40c2e; /* Red button */
+        color: #fff;
         border: none;
-        padding: 10px 20px;
-        font-size: 1em;
+        padding: 12px 25px;
+        font-size: 1.2em;
         cursor: pointer;
         border-radius: 5px;
-        transition: background-color 0.3s;
+        transition: background-color 0.3s, transform 0.3s ease-in-out;
       }
 
       #homePageBtn:hover {
-        background-color: #45a049;
+        background-color: #000; /* Black on hover */
+        transform: scale(1.05);
       }
+
+      /* Keyframes for Animations */
+      @keyframes fadeIn {
+        0% {
+          opacity: 0;
+        }
+        100% {
+          opacity: 1;
+        }
+      }
+
+      @keyframes slideDown {
+        0% {
+          transform: translateY(-50px);
+          opacity: 0;
+        }
+        100% {
+          transform: translateY(0);
+          opacity: 1;
+        }
+      }
+
+      @keyframes scaleUp {
+        0% {
+          transform: scale(0.95);
+          opacity: 0.7;
+        }
+        100% {
+          transform: scale(1);
+          opacity: 1;
+        }
+      }
+
     </style>
   </head>
   <body>
@@ -91,11 +136,10 @@
       </main>
     </div>
 
-    
+    <script>
+      document.querySelector("#homePageBtn").addEventListener("click", () => {
+        window.location.href = "index.html";
+      });
+    </script>
   </body>
 </html>
-<script>
-    document.querySelector("#homePageBtn").addEventListener("click", () => {
-      window.location.href = "index.html"; // Adjust the file name as needed
-    });
-  </script>
